change challenge link section

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		<div class="credits">
 			A challenge by
 			<a
-				href="https://www.greatfrontend.com/projects?ref=challenges"
+				href="https://www.greatfrontend.com/projects/s/how-about-this-creating-a-reusable-button-component-with-html-css-and-js-07d07671"
 				target="_blank"
 				>GreatFrontEnd Projects</a
 			>. Built by
-			<a href="https://www.greatfrontend.com/u/your_username" target="_blank"
+			<a href="https://www.greatfrontend.com/u/rizkyemha" target="_blank"
 				>Your Name</a
 			>.
 		</div>
