--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 				target="_blank"
 				>GreatFrontEnd Projects</a
 			>. Built by
-			<a href="https://www.greatfrontend.com/u/rizkyemha" target="_blank"
+			<a
+				href="https://www.greatfrontend.com/projects/u/rizkyemha"
+				target="_blank"
 				>Your Name</a
 			>.
 		</div>
